figue/tests/integration/snapshots/main__integration__err__error_missing_value_for_argument.snap
---
source: crates/figue/tests/integration/err.rs
expression: "strip_ansi_escapes :: strip_str(& err.to_string())"
---
Error: could not parse command-line arguments

Sources:
├─ cli --settings.*
└─ defaults

concurrency.. .. ⨯ MISSING

Run with --help for usage information.
Error: flag --concurrency requires a value
   ╭─[ <cli>:1:1 ]
   │
 1 │ --concurrency
   │ ──────┬──────  
   │       ╰──────── flag --concurrency requires a value
───╯
