figue/tests/integration/snapshots/main__integration__err__error_option_with_multiple_values.snap
---
source: crates/figue/tests/integration/err.rs
expression: "strip_ansi_escapes :: strip_str(& err.to_string())"
---
Error: could not parse command-line arguments

Sources:
├─ cli --settings.*
└─ defaults

maybe.. value1.. --maybe

Run with --help for usage information.
Error: unexpected argument: value2
   ╭─[ <cli>:1:16 ]
   │
 1 │ --maybe value1 value2
   │                ───┬──  
   │                   ╰──── unexpected argument: value2
───╯
