figue/tests/integration/snapshots/main__integration__err__error_out_of_range.snap
---
source: crates/figue/tests/integration/err.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: failed to parse "1000" as u8 at byte
   ╭─[ <cli>:1:8 ]
   │
 1 │ --byte 1000
   │        ──┬─  
   │          ╰─── failed to parse "1000" as u8 at byte
───╯
